# flashinfer

./: .clangd  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO_REBASE_CONTINUATION.md  alibaba_flashinfer_aiter.py  alibaba_flashinfer_only.py  bench_batch_prefill.py  compile_test.sh  custom_backend.py  pyproject.toml  setup.py  sfrag_tester_script.py  test_prefill_sfrag.sh  validate_online_softmax_stateful.py
.devcontainer/rocm/: Dockerfile
.github/workflows/: update-coverage-include.yml
amd-docs/: conf.py  index.rst  what-is-flashinfer.rst
amd-docs/about/: license.rst
amd-docs/examples/: flashinfer-examples.rst
amd-docs/install/: flashinfer-install.rst
amd-docs/sphinx/: _toc.yml.in
amd-flashinfer-jit-cache/: .gitignore  README.md  build_backend.py  pyproject.toml
amd-flashinfer-jit-cache/amd_flashinfer_jit_cache/: __init__.py
aot_build_utils/: generate.py  generate_batch_paged_prefill_inst.py  generate_batch_ragged_prefill_inst.py  generate_single_prefill_inst.py
benchmarks/: README.md
benchmarks/rocm_benchmarks/: bench_aiter_batch_paged_compare.py  bench_aiter_compare.py  bench_aiter_prefill.py  bench_fa2_prefill.py  bench_mla_hip.py
cmake/: Components.cmake  Dependencies.cmake  Options.cmake
cmake/utils/: AOTKernels.cmake  ConfigureKernelGeneration.cmake  ConfigureTargets.cmake
docker/: Dockerfile.rocm_ci
examples/: aiter_example_1.py  amd_flashinfer_rocm_tutorial.ipynb  batch_decode_example.py  batch_prefill_aiter_example.py  batch_prefill_aiter_examples.py  batch_prefill_example.py  run_jupyter_server.sh  single_prefill_backend_check.py  single_prefill_example.py  single_prefill_force_backend.py  test_batch_decode_example.py  test_qk_debug_128.py
examples/cpp/: standalone_single_prefill.cu
flashinfer/: CMakeLists.txt  __init__.py  activation.py  aiter_utils.py  aot_hip.py  cascade.py  compilation_context.py  compilation_context_hip.py  decode.py  decode_rocm.py  device_utils.py  get_include_paths.py  hip_utils.py  mla.py  mla_rocm.py  norm.py  page.py  pod.py  prefill.py  prefill_rocm.py  rope.py  sampling.py  sparse.py  utils.py
flashinfer/comm/: __init__.py  cuda_ipc.py
flashinfer/csrc/: CMakeLists.txt  batch_prefill_customize_config_hip.jinja  batch_prefill_hip.cu  batch_prefill_jit_pybind_hip.cu  batch_prefill_ragged_kernel_inst_hip.jinja  flashinfer_ops_hip.cu  pytorch_extension_utils.h  renorm_hip.cu  sampling_hip.cu  single_prefill_customize_config_hip.jinja  single_prefill_hip.cu  single_prefill_jit_pybind_hip.cu
flashinfer/csrc_rocm/: CMakeLists.txt  activation.cu  aiter_loader.cc  batch_decode.cu  batch_decode_aiter.cu  batch_decode_aiter_jit_pybind.cu  batch_decode_kernel_inst.jinja  batch_mla.cu  batch_mla_customize_config.jinja  batch_mla_jit_pybind.cu  batch_pod.cu  batch_pod_customize_config.jinja  batch_pod_jit_pybind.cu  batch_pod_kernel_inst.jinja  batch_prefill.cu  batch_prefill_aiter_customize_config.jinja  batch_prefill_config_hip.inc  batch_prefill_customize_config.jinja  batch_prefill_hip.cu  batch_prefill_jit_pybind.cu  batch_prefill_paged_aiter.cu  batch_prefill_paged_aiter_jit_pybind.cu  batch_prefill_paged_kernel_inst.jinja  batch_prefill_ragged_kernel_inst.jinja  batch_ragged_prefill_aiter.cu  batch_ragged_prefill_aiter_jit_pybind.cu  cascade.cu  flashinfer_cascade_binding.cu  flashinfer_rope_binding.cu  flashinfer_sampling_binding.cu  pod.cu  pod_customize_config.jinja  pod_jit_pybind.cu  pod_kernel_inst.jinja  pytorch_conversion_utils.h  pytorch_extension_utils.h  quantization.cu  renorm.cu  rope.cu  sampling.cu  (+10 more)
flashinfer/jit/: __init__.py  activation.py  core.py  cpp_ext.py  cpp_ext_hip.py  env.py  utils.py
include/flashinfer/: profiler.cuh  quantization.cuh  sampling.cuh  utils.cuh
include/gpu_iface/: fastdiv.cuh  gpu_runtime_compat.hpp  memory_ops.hpp  sampling.cuh  sm_id.hpp  utils.cuh
libflashinfer/: CMakeLists.txt
libflashinfer/tests/: CMakeLists.txt
libflashinfer/tests/hip/: CMakeLists.txt  test_apply_llama_rope.cpp  test_batch_prefill.cpp  test_cascade.cpp  test_compute_sfm.cpp  test_inplace_transpose_loads.cpp  test_k_smem_read_pattern.cpp  test_layout_transform.cpp  test_load_q_global_smem.cpp  test_load_q_global_smem_kernel.cpp  test_load_q_global_smem_v1.cpp  test_load_q_global_smem_v2.cpp  test_mfma_fp32_16x16x16fp16.cpp  test_mfma_load_transpose.cpp  test_pos_enc.cpp  test_produce_kv.cpp  test_q_smem_read_pattern.cpp  test_single_prefill.cpp  test_transpose_4x4_half_registers.cpp
libflashinfer/utils/: compute_qk_stub.cu  compute_qk_stub.cuh  conversion_utils.h  cpu_reference_hip.h  flashinfer_prefill_ops.hip.h  flashinfer_prefill_ops_hip.h  utils_hip.h
rocm_profiler/: rocm_profiler.py
scripts/: git_describe_rocm.py  reuse-check-selective.sh  run_hip_tests.sh  update_coverage_include.py  verify_enable_torch_compile.py
tests/: attention_reference.py  conftest.py  jit_utils.py  test_activation.py  test_alibi.py  test_aot_hip.py  test_batch_decode_kernels.py  test_batch_decode_kernels_hip.py  test_batch_decode_kernels_hip_fp8.py  test_batch_decode_vllm.py  test_batch_prefill_kernels.py  test_batch_prefill_kernels_hip.py  test_batch_prefill_kernels_hip_aiter_backend.py  test_batch_prefill_paged_kernels_hip.py  test_batch_prefill_ragged_kernels_hip.py  test_block_sparse.py  test_custom_allreduce.py  test_deepseek_mla.py  test_group_gemm.py  test_hopper.py  test_logits_cap.py  test_mla_page.py  test_non_contiguous_decode.py  test_non_contiguous_prefill.py  test_pod_kernels.py  test_quantization.py  test_sampling_hip.py  test_shared_prefix_kernels.py  test_single_prefill_kernels_hip.py  test_sliding_window.py  test_sliding_window_hip.py  test_sm_constraint_gemm.py  test_tensor_cores_decode.py
tests/attention/: test_logits_cap.py
tests/rocm_tests/: conftest.py  test_activation_hip.py  test_aot_hip.py  test_append_paged_kv_cache_aiter_hip.py  test_batch_decode_aiter_hip.py  test_batch_decode_vllm.py  test_batch_pod_hip.py  test_batch_prefill_bf16_custom_mask_hip.py  test_batch_prefill_kernels_hip.py  (+18 more)
(+86 files in other folders)
