# SPDX - FileCopyrightText : 2024 Flashinfer team.
# SPDX - FileCopyrightText : 2025 Advanced Micro Devices, Inc.
# SPDX - License - Identifier : Apache 2.0

[project]
name = "amd-flashinfer"
dynamic = ["version"]
description = "Fast Attention Algorithms for LLM Inference on ROCm"
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "AMD, Inc."}
]

# Runtime dependencies
# NOTE: torch is intentionally NOT listed here because ROCm users must install
# torch from AMD's ROCm repository, not from PyPI. For example,
#   pip install torch==2.7.1 --index-url https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4/
# See README.md for complete installation instructions.
dependencies = [
    "ninja",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/rocm/flashinfer"
Repository = "https://github.com/rocm/flashinfer"
Documentation = "https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/3rd-party/flashinfer-install.html"
"Bug Tracker" = "https://github.com/rocm/flashinfer/issues"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "torch >= 2.7",
    "numpy",
    "setuptools-scm >=9.2"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
editable.rebuild = true
build.verbose = true
logging.level = "INFO"
build-dir = "_skbuild"
experimental = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.license-files = ["LICENSE"]
wheel.packages = ["flashinfer"]
wheel.py-api = "py3"

[tool.scikit-build.sdist]
cmake = false
exclude = [
    ".clang-format",
    ".devcontainer",
    ".github",
    ".gitignore",
    ".gitmodules",
    ".pre-commit-config.yaml",
    "examples",
    "profiler",
    "benchmarks",
    "docker",
    "scripts",
    "tests",
    "docs",
    "3rdparty/mscclpp/**/*",
    "3rdparty/googletest/**/*",
    "3rdparty/nvbench/**/*",
    "3rdparty/spdlog/**/*",
    "3rdparty/composable_kernels/**/*",
    "3rdparty/cutlass/**/*",
    "ci",
    "aot_build_utils",
    "Jenkinsfile",
    "format.sh",
    "custom_backend.py",
    "version.txt",
    "CHANGELOG.md",
]
include = [
    "flashinfer/_version.py"
]

# Base CMake definitions - applied to all builds
[tool.scikit-build.cmake.define]
FLASHINFER_HIP_ARCHITECTURES = {env="FLASHINFER_HIP_ARCHITECTURES", default="gfx942"}
FLASHINFER_BUILD_WHEELS="ON"
FLASHINFER_AOT_TORCH_EXTS = {env="FLASHINFER_AOT_TORCH_EXTS", default="OFF"}
FLASHINFER_ENABLE_F16="ON"
FLASHINFER_ENABLE_BF16="ON"
FLASHINFER_ENABLE_FP8="ON"
FLASHINFER_ENABLE_FP8_E4M3="ON"
FLASHINFER_ENABLE_FP8_E5M2="ON"
FLASHINFER_ENABLE_HIP = {env="FLASHINFER_ENABLE_HIP", default="ON"}

[tool.setuptools_scm]
write_to = "flashinfer/_version.py"
tag_regex = "^v?(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)(?:[+](?P<local>[a-zA-Z0-9.]+))?$"
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"
scm.git.describe_command = ["python", "scripts/git_describe_rocm.py"]
fallback_version = "0.0.0"

[tool.codespell]
ignore-words-list = "3nd"
skip = [
    "build",
    "3rdparty",
    "dist",
    ".venv"
]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
skip = ["flashinfer/_version.py", "flashinfer/cascade.py"]
use_parentheses = true


[tool.mypy]
ignore_missing_imports = false
show_column_numbers = true
show_error_context = true
follow_imports = "skip"
ignore_errors = false
strict_optional = false


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
]
ignore = [
    # Module level import not at top of file
    "E402",
    # star imports
    "F405", "F403",
    # ambiguous name
    "E741",
    # line too long
    "E501",
    # key in dict.keys()
    "SIM118",
    # memory leaks
    "B019",
    # No such file or directory
    "E902",
    # nested `if` statements
    "SIM102",
    # `if`-`else`-block
    "SIM108",
    # assign `lambda` expressions
    "E731",
    # Loop control variable overrides iterable it iterates
    "B020",
    # Return te negated condition directly
    "SIM103",
]


[tool.pytest.ini_options]
# Ignore deprecation warnings
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Verbose output
addopts = "-v"
# HIP-specific test files - running 'pytest' with no args runs only these
testpaths = [
    "tests/test_activation.py",
    "tests/test_aot_hip.py",
    "tests/test_batch_decode_kernels_hip.py",
    "tests/test_batch_decode_vllm.py",
    "tests/test_batch_prefill_kernels_hip.py",
    "tests/test_block_sparse_indices_to_vector_sparse_offsets.py",
    "tests/test_decode_prefill_lse.py",
    "tests/test_logits_cap_hip.py",
    "tests/test_non_contiguous_decode.py",
    "tests/test_non_contiguous_prefill.py",
    "tests/test_norm_hip.py",
    "tests/test_page.py",
    "tests/test_rope.py",
    "tests/test_single_prefill_kernels_hip.py",
    "tests/test_sliding_window_hip.py",
]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
# Note: 'source' is commented out because 'include' would be ignored if source is set
# source = ["flashinfer"]
branch = true
# AMD/HIP modified files - auto-updated by GitHub Action - DO NOT EDIT THIS SECTION MANUALLY
include = [
    "flashinfer/__init__.py",
    "flashinfer/activation.py",
    "flashinfer/aot_hip.py",
    "flashinfer/compilation_context_hip.py",
    "flashinfer/decode.py",
    "flashinfer/get_include_paths.py",
    "flashinfer/hip_utils.py",
    "flashinfer/jit/__init__.py",
    "flashinfer/jit/activation.py",
    "flashinfer/jit/attention/__init__.py",
    "flashinfer/jit/attention/pytorch_hip.py",
    "flashinfer/jit/core.py",
    "flashinfer/jit/cpp_ext.py",
    "flashinfer/jit/env.py",
    "flashinfer/jit/utils.py",
    "flashinfer/norm.py",
    "flashinfer/page.py",
    "flashinfer/prefill.py",
    "flashinfer/rope.py",
    "flashinfer/utils.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
