# SPDX - FileCopyrightText : 2024 Flashinfer team.
# SPDX - FileCopyrightText : 2025 Advanced Micro Devices, Inc.
# SPDX - License - Identifier : Apache 2.0

[project]
name = "amd-flashinfer"
dynamic = ["version"]
description = "Fast Attention Algorithms for LLM Inference on ROCm"
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "AMD, Inc."}
]

# Runtime dependencies
# NOTE: torch is intentionally NOT listed here because ROCm users must install
# torch from AMD's ROCm repository, not from PyPI. For example,
#   pip install torch==2.7.1 --index-url https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4/
# See README.md for complete installation instructions.
dependencies = [
    "ninja",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/rocm/flashinfer"
Repository = "https://github.com/rocm/flashinfer"
Documentation = "https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/3rd-party/flashinfer-install.html"
"Bug Tracker" = "https://github.com/rocm/flashinfer/issues"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "torch >= 2.7",
    "numpy",
    "setuptools-scm >=9.2"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
editable.rebuild = true
build.verbose = true
logging.level = "INFO"
build-dir = "_skbuild"
experimental = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.license-files = ["LICENSE"]
wheel.packages = ["flashinfer"]
wheel.py-api = "py3"

[tool.scikit-build.sdist]
cmake = false
exclude = [
    ".clang-format",
    ".devcontainer",
    ".github",
    ".gitignore",
    ".gitmodules",
    ".pre-commit-config.yaml",
    "examples",
    "profiler",
    "benchmarks",
    "docker",
    "scripts",
    "tests",
    "docs",
    "3rdparty/spdlog/**/*",
    "3rdparty/cutlass/**/*",
    "ci",
    "Jenkinsfile",
    "format.sh",
    "custom_backend.py",
    "version.txt",
    "CHANGELOG.md",
]
include = [
    "flashinfer/_version.py"
]

[tool.setuptools_scm]
write_to = "flashinfer/_version.py"
tag_regex = "^v?(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:\\.post[0-9]+|(?:a|b|rc)[0-9]+|\\.dev[0-9]+)?)(?:[+](?P<local>[a-zA-Z0-9.]+))?$"
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"
scm.git.describe_command = ["python", "scripts/git_describe_rocm.py"]
fallback_version = "0.0.0"

[tool.codespell]
ignore-words-list = "3nd"
skip = [
    "build",
    "3rdparty",
    "dist",
    ".venv"
]


[tool.mypy]
ignore_missing_imports = false
show_column_numbers = true
show_error_context = true
follow_imports = "skip"
ignore_errors = false
strict_optional = false


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
]
ignore = [
    # Module level import not at top of file
    "E402",
    # star imports
    "F405", "F403",
    # ambiguous name
    "E741",
    # line too long
    "E501",
    # key in dict.keys()
    "SIM118",
    # memory leaks
    "B019",
    # No such file or directory
    "E902",
    # nested `if` statements
    "SIM102",
    # `if`-`else`-block
    "SIM108",
    # assign `lambda` expressions
    "E731",
    # Loop control variable overrides iterable it iterates
    "B020",
    # Return te negated condition directly
    "SIM103",
    # Function definition does not bind loop variable
    "B023",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.pytest.ini_options]
# Ignore deprecation warnings
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Verbose output
addopts = "-v"
# HIP-specific test files - running 'pytest' with no args runs only these
testpaths = [
    "tests/test_aot_hip.py",
    "tests/test_batch_decode_kernels_hip.py",
    "tests/test_batch_decode_vllm.py",
    "tests/test_batch_prefill_kernels_hip.py",
    "tests/test_block_sparse_indices_to_vector_sparse_offsets.py",
    "tests/test_decode_prefill_lse.py",
    "tests/test_logits_cap.py",
    "tests/test_quantization.py",
    "tests/test_non_contiguous_decode.py",
    "tests/test_non_contiguous_prefill.py",
    "tests/test_norm_hip.py",
    "tests/test_page.py",
    "tests/test_rope_hip.py",
    "tests/test_sampling_hip.py",
    "tests/test_single_prefill_kernels_hip.py",
    "tests/test_sliding_window_hip.py",
]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
# Note: 'source' is commented out because 'include' would be ignored if source is set
# source = ["flashinfer"]
branch = true
# AMD/HIP modified files - auto-updated by GitHub Action - DO NOT EDIT THIS SECTION MANUALLY
include = [
    "flashinfer/__init__.py",
    "flashinfer/aot_hip.py",
    "flashinfer/compilation_context_hip.py",
    "flashinfer/decode_rocm.py",
    "flashinfer/device_utils.py",
    "flashinfer/get_include_paths.py",
    "flashinfer/hip_utils.py",
    "flashinfer/jit/__init__.py",
    "flashinfer/jit/attention/__init__.py",
    "flashinfer/jit/attention/pytorch_hip.py",
    "flashinfer/jit/core.py",
    "flashinfer/jit/cpp_ext_hip.py",
    "flashinfer/jit/env.py",
    "flashinfer/jit/utils.py",
    "flashinfer/norm.py",
    "flashinfer/page.py",
    "flashinfer/prefill_rocm.py",
    "flashinfer/quantization.py",
    "flashinfer/rope.py",
    "flashinfer/sampling.py",
    "flashinfer/utils.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
